[project]
name = "qnabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langgraph>=0.4.8",
    "openai>=1.84.0",
    "pdfplumber>=0.11.6",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "tiktoken>=0.9.0",
]
